# LatticA-Salary

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  LICENSE  NOTICE  PROJECT_SUMMARY.md  QUICKSTART.md  RATE_LIMITING_IMPLEMENTATION.md  README.md  SECURITY.md  SECURITY_FIXES.md  STATUS.md  THIRD_PARTY_LICENSES.md  hardhat.config.js  package-lock.json  package.json
circuits/: salary_withdraw.circom
contracts/: CERC20.sol  ConfidentialPool.sol  ConfidentialSalaryPool.sol  SalaryPayroll.sol
docs/: ARCHITECTURE.md  DEMO_SCENARIO.md  PROJECT_STRUCTURE.md
executor/: .env.example  README.md  package-lock.json  package.json  rate-limiter.js  server.js  test-rate-limiter.js
executor/FHE16/: README.md  dev-init.js  index.js  package.json
executor/scripts/: fetch-release-assets.sh
frontend/: package-lock.json  package.json
frontend-view/: admin.html  app.js  dashboard.css  employee.html  index.html  styles.css
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/employee/: page.tsx
frontend/hooks/: useConfidential.ts  useFHE.ts  useWallet.ts
frontend/lib/: confidential.ts  fhe.ts  wallet.ts
frontend/public/: CMakeLists.txt  INSTALL_LINE  README.md
lib/fhe16/: README.md  crypto.js  fhe16.d.ts  fhe16.js
scripts/: deploy.mjs  interact.mjs
test/: CERC20.test.mjs  SalaryPayroll.test.mjs
zk-lib/: index.ts
